fix for shifting contact page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,6 +22,11 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
+/* Fix for bootstrap grid shift */
+html {
+  overflow-y: scroll;
+}
+
 /* Space out content a bit */
 body {
   padding-top: 20px;
